--- a/sass-js/index.html
+++ b/sass-js/index.html
@@ -90,15 +90,12 @@
       <div class="info">
         <h3>Trayectorias</h3>
         <p class="text-body-emphasis">
-          El Programa consta de dos etapas de formación, una transversal y
-          otra específica, luego de las que, quienes demuestren compromiso,
-          responsabilidad, excelencia en su desempeño y actitud positiva,
-          pueden recibir una propuesta laboral de Tienda Inglesa.
+          Brindamos capacitación a jóvenes para el desarrollo de habilidades y herramientas que faciliten su inserción laboral en Tienda Inglesa.
         </p>
         <div class="iconsInfo">
           <div class="iconFlag">
             <img src="./assetts/iconHand/icons-hand-with-pen-100.png" alt="" />
-            <p>721 han participado en el programa</p>
+            <p>784 han participado en el programa</p>
           </div>
           <div class="iconFlag">
             <img src="./assetts/iconHand/icons-handshake-100.png" alt="" />
@@ -125,8 +122,7 @@
       <div class="info">
         <h3>Sin Límites</h3>
         <p class="text-body-emphasis">
-          Brindar a los jóvenes capacitación para el desarrollo de habilidades blandas y técnicas que faciliten la
-          inserción laboral formal.
+          Nuestros equipos se vuelven diversos, crecen y se transforman positivamente a través de la inclusión de personas con discapacidad.
         </p>
         <div class="iconsInfo">
           <div class="iconFlag">
@@ -149,9 +145,7 @@
         <img class="destello" src="./assetts/destello.svg" alt="">
         <h2>Noticias</h2>
         <p class="text-body-emphasis">
-          <!-- PEDIR TEXTO -->
-          Lorem ipsum dolor sit amet consectetur. Interdum a vel id consequat. Mi eget massa pellentesque risus erat
-          quam quam ac. Interdum a vel id consequat. Egestas sagittis mollis in tristique.
+          Te invitamos a conocer más sobre nuestro trabajo, en nuestra sección de noticias podrás encontrar todas las novedades de nuestra Fundación.
         </p>
       </div>
       <div id="gridCards">
@@ -163,100 +157,101 @@
     </article>
   </section>
 
-  <section class="bgFrame colaboradores">
-    <article class="container shadowB">
-      <h3>Organizaciones que nos acompañan</h3>
-      <div id="carouselLogos" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselLogos" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Diapo 1"></button>
-          <button type="button" data-bs-target="#carouselLogos" data-bs-slide-to="1" aria-label="Diapo 2"></button>
-          <button type="button" data-bs-target="#carouselLogos" data-bs-slide-to="2" aria-label="Diapo 3"></button>
-          <button type="button" data-bs-target="#carouselLogos" data-bs-slide-to="3" aria-label="Diapo 4"></button>
-        </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <div class="wrapper">
-              <div class="item"><img alt="logo MIDES" src="./assetts/logos/logo_Mides.png" loading="lazy"></div>
-              <div class="item"><img alt="logo Nuestro Camino" src="./assetts/logos/logo_NuestroCamino.png" loading="lazy"></div>
-              <div class="item"><img alt="logo Uniendo" src="./assetts/logos/logo_Uniendo.png" loading="lazy"></div>      
-              <div class="item"><img alt="logo Centro Don Bosco La Tablada" src="./assetts/logos/logo_CentroDonBoscoLaTablada.png" loading="lazy"></div> 
-            </div>
+  <section class="container">
+    <div class="seccionCierre colaboradores">
+      <article>
+        <h3>Organizaciones que nos acompañan</h3>
+        <div id="carouselLogos" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselLogos" data-bs-slide-to="0" class="active"
+              aria-current="true" aria-label="Diapo 1"></button>
+            <button type="button" data-bs-target="#carouselLogos" data-bs-slide-to="1" aria-label="Diapo 2"></button>
+            <button type="button" data-bs-target="#carouselLogos" data-bs-slide-to="2" aria-label="Diapo 3"></button>
+            <button type="button" data-bs-target="#carouselLogos" data-bs-slide-to="3" aria-label="Diapo 4"></button>
           </div>
-          <div class="carousel-item">
-            <div class="wrapper">
-              <div class="item"><img alt="logo Cimientos" src="./assetts/logos/logo_Cimientos.png" loading="lazy"></div>
-              <div class="item"><img alt="logo Fe y Alegria" src="./assetts/logos/logo_FeAlegria.png" loading="lazy"></div>
-              <div class="item"><img alt="logo Centro Educativo Santa Margarita" src="./assetts/logos/logo_CentroSantaMargarita.png" loading="lazy"></div>
-              <div class="item"><img alt="logo Fundación Los Rosales" src="./assetts/logos/logo_FundacionLosRosales.png" loading="lazy"></div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="wrapper">
+                <div class="item">
+                  <img alt="logo MIDES" src="./assetts/logos/logo_Mides.png" loading="lazy" />
+                </div>
+                <div class="item">
+                  <img alt="logo Treboles Centro Educativo" src="./assetts/logos/logo_Treboles.png" loading="lazy" />
+                </div>
+                <div class="item">
+                  <img alt="logo Quebracho" src="./assetts/logos/logo_Quebracho.png" loading="lazy" />
+                </div>
+                <div class="item">
+                  <img alt="logo Cimientos" src="./assetts/logos/logo_Cimientos.png" loading="lazy" />
+                </div>
+              </div>
             </div>
-          </div>
-          <div class="carousel-item">
-            <div class="wrapper">
-              <div class="item"><img alt="logo Treboles Centro Educativo" src="./assetts/logos/logo_Treboles.png" loading="lazy"></div>
-              <div class="item"><img alt="logo Aires Puros Centro Saleciano" src="./assetts/logos/logo_AiresPuros.png" loading="lazy"></div>
-              <div class="item"><img alt="logo Quebracho" src="./assetts/logos/logo_Quebracho.png" loading="lazy"></div>
-              <div class="item"><img alt="logo Madres De La Cruz" src="./assetts/logos/logo_MadresDeLaCruz.png" loading="lazy"></div>
+            <div class="carousel-item">
+              <div class="wrapper">
+                <div class="item">
+                  <img alt="logo Centro Don Bosco La Tablada" src="./assetts/logos/logo_CentroDonBoscoLaTablada.png"
+                    loading="lazy" />
+                </div>
+                <div class="item">
+                  <img alt="logo Fe y Alegria" src="./assetts/logos/logo_FeAlegria.png" loading="lazy" />
+                </div>
+                <div class="item">
+                  <img alt="logo Centro Educativo Santa Margarita" src="./assetts/logos/logo_CentroSantaMargarita.png"
+                    loading="lazy" />
+                </div>
+                <div class="item">
+                  <img alt="logo Aires Puros Centro Saleciano" src="./assetts/logos/logo_AiresPuros.png"
+                    loading="lazy" />
+                </div>
+              </div>
             </div>
-          </div>
-          <div class="carousel-item">
-            <div class="wrapper">
-              <div class="item"><img alt="logo Gurises Unidos" src="./assetts/logos/logo_GurisesUnidos.png" loading="lazy"></div>
-              <div class="item"><img alt="logo Fundacion Tzedaká" src="./assetts/logos/logo_FundacionTzedaka.png" loading="lazy"></div>
-              <div class="item"><img alt="logo Centro Los Zorzales" src="./assetts/logos/logo_CentroLosZorzales.png" loading="lazy"></div>
-              <div class="item noShow"></div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </article>
-</section>
 
-<section class="container">
-  <img class="destello" src="./assetts/destello.svg" alt="">
-  <article class="videoTestimonio">
-    <video class="video shadowP" preload="none" poster="./assetts/testimonios/MidesLoading.webp"
-      aria-label="Testimonio de Cecilia Sena, Directora Nacional de Desarrollo Social, MIDES">
-      <source src="./assetts/testimonios/MidesTestimonio.mp4" type="video/mp4">
-      <source src="./assetts/testimonios/MidesLoading.webp" type="image/png">
-      Lo sentimos, su navegador no puede reproducir el video.
-    </video>
-    <div>
-      <button type="button" class="videoHandler" data-state="play" title="Reproducir" aria-label="reproduce y pausa video testimonio">
-        <i class="iconVideoPlay bi bi-play-circle"></i>
-      </button>
-      <h3>Cecilia Sena</h3>
-      <h4>Directora Nacional de Desarrollo Social</h4>
-      <h5>Ministerio de Desarrollo Social</h5>
-      <q class="text-body-emphasis">
-        Desde el Mides la propuesta nos pareció una gran iniciativa, en línea con el programa de Formación Continua, donde buscamos brindar herramientas para el empleo...
-      </q>
+            <div class="carousel-item">
+              <div class="wrapper">
+                <div class="item">
+                  <img alt="logo Fundación Los Rosales" src="./assetts/logos/logo_FundacionLosRosales.png"
+                    loading="lazy" />
+                </div>
+                <div class="item">
+                  <img alt="logo Madres De La Cruz" src="./assetts/logos/logo_MadresDeLaCruz.png" loading="lazy" />
+                </div>
+                <div class="item">
+                  <img alt="logo Gurises Unidos" src="./assetts/logos/logo_GurisesUnidos.png" loading="lazy">
+                </div>
+                <div class="item">
+                  <img alt="logo Centro Los Zorzales" src="./assetts/logos/logo_CentroLosZorzales.png" loading="lazy">
+                </div>
+              </div>
+            </div>
+            
+            <div class="carousel-item">
+              <div class="wrapper">
+                <div class="item">
+                  <img alt="logo Centro Dionisio Díaz" src="./assetts/logos/logo_DionisioDiaz.png"
+                  loading="lazy" />
+                </div>
+                <div class="item"><img alt="logo Uniendo" src="./assetts/logos/logo_Uniendo.png" loading="lazy"></div> 
+                <div class="item"><img alt="logo Nuestro Camino" src="./assetts/logos/logo_NuestroCamino.png" loading="lazy"></div>
+                <div class="item noShow"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </article>
     </div>
-  </article>
-  <img class="destello reflect" src="./assetts/destello.svg" alt="">
-</section>
-
-<section class="container">
-  <div class="seccionCierre">
-    <article class="seccionSocial">
-      <h3>Compromiso Social</h3>
-      <p>Lorem ipsum dolor sit amet consectetur. Malesuada tortor justo rhoncus dolor amet diam venenatis eget. Porta felis sed eget quam diam non. Lacus purus nec mollis dapibus enim. Donec massa auctor duis ac suspendisse nullam aenean.</p>
-      <a href="./social.html" class="btn btn-outline-primary">Ver iniciativas</a>
-    </article>
-  </div>
-
-</section>
+  </section>
 
   <footer>
     <div class="container">
       <img src="./assetts/logoFundacionF.svg" alt="Fundación Tienda Inglesa" />
       <p class="fw-light">© 2023 Fundación Tienda Inglesa.</p>
       <div>
-        <!-- ACTUALIZAR LINKS SOCIALES -->
-        <a href="https://youtube.com/@canaltiendainglesa" target="_blank" aria-label="Ir a nuestro YouTube"><i class="bi bi-youtube"></i></a>
-        <a href="http://twitter.com/TiendaInglesa" target="_blank" aria-label="Ir a nuestro Twitter - X"><i class="bi bi-twitter-x"></i></a>
-        <a href="https://instagram.com/tiendainglesa" target="_blank" aria-label="Ir a nuestro Instagram"><i class="bi bi-instagram"></i></a>
-        <a href="https://www.threads.net/@tiendainglesa" target="_blank" aria-label="Ir a nuestro Threads"><i class="bi bi-threads-fill"></i></a>
-        <a href="http://www.facebook.com/tiendainglesa" target="_blank" aria-label="Ir a nuestro Facebook"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.linkedin.com/company/fundacion-tienda-inglesa" target="_blank" aria-label="Ir a nuestro LinkedIn"><i class="bi bi-linkedin"></i></a>
+        <a href="https://youtube.com/@canaltiendainglesa" target="_blank" aria-label="Ir al YouTube Tienda Inglesa"><i class="bi bi-youtube"></i></a>
+        <a href="https://instagram.com/tiendainglesa" target="_blank" aria-label="Ir al Instagram Tienda Inglesa"><i class="bi bi-instagram"></i></a>
+        <a href="http://www.facebook.com/tiendainglesa" target="_blank" aria-label="Ir al Facebook Tienda Inglesa"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.threads.net/@tiendainglesa" target="_blank" aria-label="Ir al Threads Tienda Inglesa"><i class="bi bi-threads-fill"></i></a>
+        <a href="http://twitter.com/TiendaInglesa" target="_blank" aria-label="Ir al X - Twitter Tienda Inglesa"><i class="bi bi-twitter-x"></i></a>
       </div>
     </div>
   </footer>
