--- a/sass-js/nosotros.html
+++ b/sass-js/nosotros.html
@@ -137,15 +137,14 @@
 
 <section class="container">
   <article class="heading">
-    <h2>Así lo hacemos</h2>
+    <h2>Los resultados de nuestro trabajo</h2>
     <p class="text-body-emphasis">
-      <!-- PEDIR TEXTO -->
-      Lorem ipsum dolor sit amet consectetur. Mattis eget ac ornare gravida gravida sit egestas nunc est. Gravida mi duis in vulputate pharetra eget adipiscing hendrerit. Lorem ipsum dolor sit amet consectetur. Mattis eget ac ornare gravida gravida sit egestas nunc est. Gravida mi duis in vulputate pharetra eget adipiscing hendrerit.
+      Para nosotros, evaluar y medir el impacto de nuestras iniciativas es fundamental para mejorar y continuar evolucionando.
     </p>
     <div class="gridIndicadores">
       <div>
         <img src="../assetts/iconHand/icons-hand-with-pen-100.png" alt="" />
-        <h3>721</h3>
+        <h3>784</h3>
         <p>personas participaron en el programa Trayectorias</p>
       </div>
       <div>
@@ -177,20 +176,46 @@
   </article>
 </section>
 
+<section class="container">
+  <img class="destello" src="./assetts/destello.svg" alt="">
+  <article class="videoTestimonio">
+    <!-- preload="none" poster="./assetts/testimonios/MidesLoading.webp" -->
+    <video class="video shadowP" aria-label="Testimonio de Cecilia Sena, Directora Nacional de Desarrollo Social, MIDES">
+      <source src="./assetts/testimonios/MidesTestimonio.mp4" type="video/mp4">
+      <source src="./assetts/testimonios/MidesLoading.webp" type="image/png">
+      Lo sentimos, su navegador no puede reproducir el video.
+    </video>
+    <div>
+      <button type="button" class="videoHandler" data-state="play" title="Reproducir" aria-label="reproduce y pausa video testimonio">
+        <i class="iconVideoPlay bi bi-play-circle"></i>
+      </button>
+      <h3>Cecilia Sena</h3>
+      <h4>Directora Nacional de Desarrollo Social</h4>
+      <h5>Ministerio de Desarrollo Social</h5>
+      <q class="text-body-emphasis">
+        Desde el Mides la propuesta nos pareció una gran iniciativa, en línea con el programa de Formación Continua, donde buscamos brindar herramientas para el empleo...
+      </q>
+    </div>
+  </article>
+  <img class="destello reflect" src="./assetts/destello.svg" alt="">
+</section>
+
   <footer>
     <div class="container">
       <img src="./assetts/logoFundacionF.svg" alt="Fundación Tienda Inglesa" />
       <p class="fw-light">© 2023 Fundación Tienda Inglesa.</p>
       <div>
-        <a href="https://youtube.com/@canaltiendainglesa" target="_blank" aria-label="Ir a nuestro YouTube"><i class="bi bi-youtube"></i></a>
-        <a href="http://twitter.com/TiendaInglesa" target="_blank" aria-label="Ir a nuestro Twitter - X"><i class="bi bi-twitter-x"></i></a>
-        <a href="https://instagram.com/tiendainglesa" target="_blank" aria-label="Ir a nuestro Instagram"><i class="bi bi-instagram"></i></a>
-        <a href="https://www.threads.net/@tiendainglesa" target="_blank" aria-label="Ir a nuestro Threads"><i class="bi bi-threads-fill"></i></a>
-        <a href="http://www.facebook.com/tiendainglesa" target="_blank" aria-label="Ir a nuestro Facebook"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.linkedin.com/company/fundacion-tienda-inglesa" target="_blank" aria-label="Ir a nuestro LinkedIn"><i class="bi bi-linkedin"></i></a>
+        <a href="https://youtube.com/@canaltiendainglesa" target="_blank" aria-label="Ir al YouTube Tienda Inglesa"><i class="bi bi-youtube"></i></a>
+        <a href="https://instagram.com/tiendainglesa" target="_blank" aria-label="Ir al Instagram Tienda Inglesa"><i class="bi bi-instagram"></i></a>
+        <a href="http://www.facebook.com/tiendainglesa" target="_blank" aria-label="Ir al Facebook Tienda Inglesa"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.threads.net/@tiendainglesa" target="_blank" aria-label="Ir al Threads Tienda Inglesa"><i class="bi bi-threads-fill"></i></a>
+        <a href="http://twitter.com/TiendaInglesa" target="_blank" aria-label="Ir al X - Twitter Tienda Inglesa"><i class="bi bi-twitter-x"></i></a>
       </div>
     </div>
   </footer>
   <script type="module" src="./js/main.js"></script>
+  <script type="module" src="./js/codigoNosotros.js"></script>
 </body>
 
 </html>
