--- a/sass-js/post.html
+++ b/sass-js/post.html
@@ -109,36 +109,12 @@
         />
         <p class="fw-light">© 2023 Fundación Tienda Inglesa.</p>
         <div>
-          <a
-            href="https://youtube.com/@canaltiendainglesa"
-            target="_blank"
-            aria-label="Ir a nuestro YouTube"
-            ><i class="bi bi-youtube"></i
-          ></a>
-          <a
-            href="http://twitter.com/TiendaInglesa"
-            target="_blank"
-            aria-label="Ir a nuestro Twitter - X"
-            ><i class="bi bi-twitter-x"></i
-          ></a>
-          <a
-            href="https://instagram.com/tiendainglesa"
-            target="_blank"
-            aria-label="Ir a nuestro Instagram"
-            ><i class="bi bi-instagram"></i
-          ></a>
-          <a
-            href="https://www.threads.net/@tiendainglesa"
-            target="_blank"
-            aria-label="Ir a nuestro Threads"
-            ><i class="bi bi-threads-fill"></i
-          ></a>
-          <a
-            href="http://www.facebook.com/tiendainglesa"
-            target="_blank"
-            aria-label="Ir a nuestro Facebook"
-            ><i class="bi bi-facebook"></i
-          ></a>
+          <a href="https://www.linkedin.com/company/fundacion-tienda-inglesa" target="_blank" aria-label="Ir a nuestro LinkedIn"><i class="bi bi-linkedin"></i></a>
+          <a href="https://youtube.com/@canaltiendainglesa" target="_blank" aria-label="Ir al YouTube Tienda Inglesa"><i class="bi bi-youtube"></i></a>
+          <a href="https://instagram.com/tiendainglesa" target="_blank" aria-label="Ir al Instagram Tienda Inglesa"><i class="bi bi-instagram"></i></a>
+          <a href="http://www.facebook.com/tiendainglesa" target="_blank" aria-label="Ir al Facebook Tienda Inglesa"><i class="bi bi-facebook"></i></a>
+          <a href="https://www.threads.net/@tiendainglesa" target="_blank" aria-label="Ir al Threads Tienda Inglesa"><i class="bi bi-threads-fill"></i></a>
+          <a href="http://twitter.com/TiendaInglesa" target="_blank" aria-label="Ir al X - Twitter Tienda Inglesa"><i class="bi bi-twitter-x"></i></a>
         </div>
       </div>
     </footer>
