--- a/sass-js/sin_limites.html
+++ b/sass-js/sin_limites.html
@@ -17,7 +17,6 @@
 
     <title>Fundación Tienda Inglesa</title>
   </head>
-
   <body>
     <header class="shadowB">
       <nav class="navbar navbar-expand-lg">
@@ -146,10 +145,10 @@
         <ol class="lista">
           <li>Definición de vacantes</li>
           <li>Convocatoria</li>
-          <li>Adaptaciones necesarias</li>
-          <li>Inducción y capacitación del trabajador</li>
           <li>Análisis ocupacionales</li>
           <li>Selección</li>
+          <li>Adaptaciones necesarias</li>
+          <li>Inducción y capacitación del trabajador</li>
           <li>Espacios de sensibilización para los equipos de trabajo</li>
           <li>Acompañamiento y evaluaciones</li>
         </ol>
@@ -159,7 +158,7 @@
     <section class="container">
       <img class="destello" src="./assetts/destello.svg" alt="" />
       <article class="testimonios">
-        <div class="shadowP">
+        <div class="shadowP" aria-label="testimonio Guillermo">
           <img src="./assetts/testimonios/sinLimites1.webp" alt="avatar Guillermo">
           <div class="estrellas">
             <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
@@ -170,7 +169,7 @@
             <h4>Guillermo</h4>
             <h5>Sucursal Propios</h5>
         </div>
-        <div class="shadowP">
+        <div class="shadowP" aria-label="testimonio Uniendo">
           <img src="./assetts/logos/logo_Uniendo.png" alt="logo Uniendo">
           <div class="estrellas">
             <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
@@ -178,10 +177,10 @@
             <q>
               Desde Uniendo agradecemos a la Fundación Tienda Inglesa por su dedicación y compromiso con la inclusión laboral de personas con discapacidad. Esta dedicación y compromiso se ve en cada una de las personas involucradas en las diferentes sucursales, donde siempre están dispuestos a dar lo mejor para que cada inclusión sea un éxito, generando un ambiente laboral de una gran calidez humana. ¡Gracias por confiar en nuestro equipo para acompañarlos durante todo el proceso!
             </q>
-            <h4>Un nombre ???</h4><!-- pedir nombre -->
-            <h5>Uniendo</h5>
+            <h4>Equipo de Uniendo</h4>
+            <!-- <h5>Uniendo</h5> -->
         </div>
-        <div class="shadowP">
+        <div class="shadowP" aria-label="testimonio Facundo">
           <img src="./assetts/testimonios/sinLimites2.webp" alt="avatar Facundo">
           <div class="estrellas">
             <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
@@ -258,8 +257,8 @@
             </div>
 
             <div class="col-12">
-              <label for="subirRegistro" class="form-label">Subir Registro</label>
-              <input class="form-control" type="file" id="subirRegistro" name="registro" required>
+              <label for="registro" class="form-label">Subir Registro</label>
+              <input class="form-control" type="file" id="registro" name="registro" required>
               <div class="valid-feedback">
                 El Registro fue cargado con éxito
               </div>
@@ -269,8 +268,8 @@
             </div>
 
             <div class="col-12">
-              <label for="subirCurriculum" class="form-label">Subir curriculum</label>
-              <input class="form-control" type="file" id="subirCurriculum" name="curriculum" required>
+              <label for="curriculum" class="form-label">Subir curriculum</label>
+              <input class="form-control" type="file" id="curriculum" name="curriculum" required>
               <div class="valid-feedback">
                 El curriculum vitae fue cargado con éxito
               </div>
@@ -297,36 +296,12 @@
         />
         <p class="fw-light">© 2023 Fundación Tienda Inglesa.</p>
         <div>
-          <a
-            href="https://youtube.com/@canaltiendainglesa"
-            target="_blank"
-            aria-label="Ir a nuestro YouTube"
-            ><i class="bi bi-youtube"></i
-          ></a>
-          <a
-            href="http://twitter.com/TiendaInglesa"
-            target="_blank"
-            aria-label="Ir a nuestro Twitter - X"
-            ><i class="bi bi-twitter-x"></i
-          ></a>
-          <a
-            href="https://instagram.com/tiendainglesa"
-            target="_blank"
-            aria-label="Ir a nuestro Instagram"
-            ><i class="bi bi-instagram"></i
-          ></a>
-          <a
-            href="https://www.threads.net/@tiendainglesa"
-            target="_blank"
-            aria-label="Ir a nuestro Threads"
-            ><i class="bi bi-threads-fill"></i
-          ></a>
-          <a
-            href="http://www.facebook.com/tiendainglesa"
-            target="_blank"
-            aria-label="Ir a nuestro Facebook"
-            ><i class="bi bi-facebook"></i
-          ></a>
+          <a href="https://www.linkedin.com/company/fundacion-tienda-inglesa" target="_blank" aria-label="Ir a nuestro LinkedIn"><i class="bi bi-linkedin"></i></a>
+          <a href="https://youtube.com/@canaltiendainglesa" target="_blank" aria-label="Ir al YouTube Tienda Inglesa"><i class="bi bi-youtube"></i></a>
+          <a href="https://instagram.com/tiendainglesa" target="_blank" aria-label="Ir al Instagram Tienda Inglesa"><i class="bi bi-instagram"></i></a>
+          <a href="http://www.facebook.com/tiendainglesa" target="_blank" aria-label="Ir al Facebook Tienda Inglesa"><i class="bi bi-facebook"></i></a>
+          <a href="https://www.threads.net/@tiendainglesa" target="_blank" aria-label="Ir al Threads Tienda Inglesa"><i class="bi bi-threads-fill"></i></a>
+          <a href="http://twitter.com/TiendaInglesa" target="_blank" aria-label="Ir al X - Twitter Tienda Inglesa"><i class="bi bi-twitter-x"></i></a>
         </div>
       </div>
     </footer>
