--- a/sass-js/social.html
+++ b/sass-js/social.html
@@ -84,7 +84,7 @@
         </span>
       </div>
       <article class="container">
-        <h4 class="shadowY">En Tienda Inglesa estamos atentos a...</h4>
+        <h4 class="shadowY">Llevamos adelante iniciativas que tengan un impacto social positivo, a través de acciones de voluntariado, y apoyo a organizaciones con las que compartimos foco de trabajo.</h4>
         <img src="./assetts/flecha.svg" alt="" />
       </article>
     </section>
@@ -99,7 +99,7 @@
         </div>
 
         <div class="info">
-          <h2>VOLUNTARIADO</h2>
+          <h2>Acciones positivas</h2>
           <p class="text-body-emphasis">
             Coordinamos actividades con diversas instituciones e iniciativas.
             Todo el trabajo de los programas es posible gracias al compromiso de
@@ -124,7 +124,7 @@
           aria-label="Video Institucional con testimonios e imagenes de diferentes jornadas de voluntariado y preparación de donaciones"
         >
           <source
-            src="./assetts/videos/videoSinLimites_2022.mp4"
+            src="./assetts/videos/videoFundaciónCeleste.mp4"
             type="video/mp4"
           />
           Lo sentimos, su navegador no puede reproducir el video.
@@ -243,10 +243,11 @@
         <div class="info">
           <h2>DONACIONES</h2>
           <p class="text-body-emphasis">
-            Lorem ipsum dolor sit amet consectetur. Pulvinar magna nunc dolor
-            posuere. In dignissim...
+            Para conocer más sobre estas iniciativas, por favor,
+            <a href="">visitar nuestro sitio Institucional.</a>
+            <!--  -->
           </p>
-          <div class="iconsInfo">
+          <!-- <div class="iconsInfo">
             <div class="iconFlag">
               <img
                 src="./assetts/iconHand/icons-sell-100.png"
@@ -254,7 +255,7 @@
               />
               <p>60% sucursales participantes</p>
             </div>
-          </div>
+          </div> -->
         </div>
       </article>
     </section>
@@ -267,36 +268,12 @@
         />
         <p class="fw-light">© 2023 Fundación Tienda Inglesa.</p>
         <div>
-          <a
-            href="https://youtube.com/@canaltiendainglesa"
-            target="_blank"
-            aria-label="Ir a nuestro YouTube"
-            ><i class="bi bi-youtube"></i
-          ></a>
-          <a
-            href="http://twitter.com/TiendaInglesa"
-            target="_blank"
-            aria-label="Ir a nuestro Twitter - X"
-            ><i class="bi bi-twitter-x"></i
-          ></a>
-          <a
-            href="https://instagram.com/tiendainglesa"
-            target="_blank"
-            aria-label="Ir a nuestro Instagram"
-            ><i class="bi bi-instagram"></i
-          ></a>
-          <a
-            href="https://www.threads.net/@tiendainglesa"
-            target="_blank"
-            aria-label="Ir a nuestro Threads"
-            ><i class="bi bi-threads-fill"></i
-          ></a>
-          <a
-            href="http://www.facebook.com/tiendainglesa"
-            target="_blank"
-            aria-label="Ir a nuestro Facebook"
-            ><i class="bi bi-facebook"></i
-          ></a>
+          <a href="https://www.linkedin.com/company/fundacion-tienda-inglesa" target="_blank" aria-label="Ir a nuestro LinkedIn"><i class="bi bi-linkedin"></i></a>
+          <a href="https://youtube.com/@canaltiendainglesa" target="_blank" aria-label="Ir al YouTube Tienda Inglesa"><i class="bi bi-youtube"></i></a>
+          <a href="https://instagram.com/tiendainglesa" target="_blank" aria-label="Ir al Instagram Tienda Inglesa"><i class="bi bi-instagram"></i></a>
+          <a href="http://www.facebook.com/tiendainglesa" target="_blank" aria-label="Ir al Facebook Tienda Inglesa"><i class="bi bi-facebook"></i></a>
+          <a href="https://www.threads.net/@tiendainglesa" target="_blank" aria-label="Ir al Threads Tienda Inglesa"><i class="bi bi-threads-fill"></i></a>
+          <a href="http://twitter.com/TiendaInglesa" target="_blank" aria-label="Ir al X - Twitter Tienda Inglesa"><i class="bi bi-twitter-x"></i></a>
         </div>
       </div>
     </footer>
