--- a/sass-js/trayectorias.html
+++ b/sass-js/trayectorias.html
@@ -61,8 +61,7 @@
     </div>
     <article class="container">
       <h4 class="shadowY">
-        Brindamos capacitación a jóvenes para el desarrollo de habilidades y herramientas que faciliten su inserción
-        laboral en Tienda Inglesa.
+        Brindamos capacitación a jóvenes para el desarrollo de habilidades y herramientas que faciliten su inserción laboral en Tienda Inglesa.
       </h4>
       <img src="./assetts/flecha.svg" alt="" />
     </article>
@@ -110,11 +109,11 @@
         Uno de los aspectos más importantes del programa es que el impacto que produce logra mantenerse en el tiempo y
         no solo modificar la vida de quienes participan, sino también la de su grupo de convivencia.
       </p>
-      <h3>La inserción en números</h3>
+      <h3>Nuestros indicadores de impacto</h3>
       <div class="gridIndicadores">
         <div>
           <img src="../assetts/iconHand/icons-hand-with-pen-100.png" alt="" />
-          <h3>721</h3>
+          <h3>784</h3>
           <p>personas participaron en el programa Trayectorias</p>
         </div>
         <div>
@@ -149,13 +148,13 @@
         no solo modificar la vida de quienes participan, sino también la de su grupo de convivencia.
       </p>
       <ol class="lista">
+        <li>Capacitaciones internas</li>
         <li>Definición de vacantes</li>
         <li>Convocatoria</li>
-        <li>Capacitación de Jovenes</li>
-        <li>Acompañamiento</li>
-        <li>Capacitaciones internas</li>
         <li>Selección</li>
+        <li>Capacitación de Jovenes y evaluaciones</li>
         <li>Propuestas Laborales</li>
+        <li>Acompañamiento y evaluaciones</li>
       </ol>
     </article>
   </section>
@@ -211,7 +210,7 @@
   <section class="container">
     <img class="destello" src="./assetts/destello.svg" alt="" />
     <article class="testimonios">
-      <div class="shadowP">
+      <div class="shadowP" aria-label="testimonio Los Rosales">
         <img src="./assetts/testimonios/testimonioTraye1.webp" alt="avatar Helena Castro">
         <div class="estrellas">
           <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i
@@ -224,10 +223,10 @@
           participan de nuestros programa, generando la tranquilidad de saber que continúan próxima etapa en una empresa
           de prestigio y en condiciones formales de trabajo.
         </q>
-        <h4>Helena Castro</h4>
-        <h5>Los Rosales</h5>
+        <h4>Los Rosales</h4>
+        <!-- <h5></h5> -->
       </div>
-      <div class="shadowP">
+      <div class="shadowP" aria-label="testimonio Centro Salesiano Aires Puros">
         <img src="./assetts/testimonios/testimonioTraye2.webp" alt="avatar Florencia Pozzi y Santiago Texeira">
         <div class="estrellas">
           <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i
@@ -242,7 +241,7 @@
         <h4>Florencia Pozzi y Santiago Texeira</h4>
         <h5>Centro Salesiano Aires Puros</h5>
       </div>
-      <div class="shadowP">
+      <div class="shadowP" aria-label="testimonio funcionaria Tienda Inglesa">
         <img src="./assetts/testimonios/testimonioTraye3.webp" alt="avatar Caroline Carcabello">
         <div class="estrellas">
           <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i
@@ -285,6 +284,7 @@
               aria-current="true" aria-label="Diapo 1"></button>
             <button type="button" data-bs-target="#carouselLogos" data-bs-slide-to="1" aria-label="Diapo 2"></button>
             <button type="button" data-bs-target="#carouselLogos" data-bs-slide-to="2" aria-label="Diapo 3"></button>
+            <button type="button" data-bs-target="#carouselLogos" data-bs-slide-to="3" aria-label="Diapo 4"></button>
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
@@ -335,9 +335,21 @@
                 <div class="item">
                   <img alt="logo Gurises Unidos" src="./assetts/logos/logo_GurisesUnidos.png" loading="lazy">
                 </div>
+                <div class="item noShow"></div>
+              </div>
+            </div>
+            
+            <div class="carousel-item">
+              <div class="wrapper">
+                <div class="item">
+                  <img alt="logo Centro Dionisio Díaz" src="./assetts/logos/logo_DionisioDiaz.png"
+                  loading="lazy" />
+                </div>
+                <div class="item noShow"></div>
                 <div class="item">
                   <img alt="logo Centro Los Zorzales" src="./assetts/logos/logo_CentroLosZorzales.png" loading="lazy">
                 </div>
+                <div class="item noShow"></div>
               </div>
             </div>
           </div>
@@ -352,16 +364,12 @@
       <img src="./assetts/logoFundacionF.svg" alt="Fundación Tienda Inglesa" />
       <p class="fw-light">© 2023 Fundación Tienda Inglesa.</p>
       <div>
-        <a href="https://youtube.com/@canaltiendainglesa" target="_blank" aria-label="Ir a nuestro YouTube"><i
-            class="bi bi-youtube"></i></a>
-        <a href="http://twitter.com/TiendaInglesa" target="_blank" aria-label="Ir a nuestro Twitter - X"><i
-            class="bi bi-twitter-x"></i></a>
-        <a href="https://instagram.com/tiendainglesa" target="_blank" aria-label="Ir a nuestro Instagram"><i
-            class="bi bi-instagram"></i></a>
-        <a href="https://www.threads.net/@tiendainglesa" target="_blank" aria-label="Ir a nuestro Threads"><i
-            class="bi bi-threads-fill"></i></a>
-        <a href="http://www.facebook.com/tiendainglesa" target="_blank" aria-label="Ir a nuestro Facebook"><i
-            class="bi bi-facebook"></i></a>
+        <a href="https://www.linkedin.com/company/fundacion-tienda-inglesa" target="_blank" aria-label="Ir a nuestro LinkedIn"><i class="bi bi-linkedin"></i></a>
+        <a href="https://youtube.com/@canaltiendainglesa" target="_blank" aria-label="Ir al YouTube Tienda Inglesa"><i class="bi bi-youtube"></i></a>
+        <a href="https://instagram.com/tiendainglesa" target="_blank" aria-label="Ir al Instagram Tienda Inglesa"><i class="bi bi-instagram"></i></a>
+        <a href="http://www.facebook.com/tiendainglesa" target="_blank" aria-label="Ir al Facebook Tienda Inglesa"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.threads.net/@tiendainglesa" target="_blank" aria-label="Ir al Threads Tienda Inglesa"><i class="bi bi-threads-fill"></i></a>
+        <a href="http://twitter.com/TiendaInglesa" target="_blank" aria-label="Ir al X - Twitter Tienda Inglesa"><i class="bi bi-twitter-x"></i></a>
       </div>
     </div>
   </footer>
