--- a/sass-js/contacto.html
+++ b/sass-js/contacto.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
   <head>
@@ -89,8 +88,7 @@
       </div>
       <article class="container">
         <h4 class="shadowY">
-            Podes comunicarte con nosotros a traves de.... 
-            o completa el formulario aqui debajo.
+          Te invitamos a enviarnos tus consultas o sugerencias completando el formulario a continuación.
         </h4>
         <img src="./assetts/flecha.svg" alt="" />
       </article>
@@ -98,9 +96,6 @@
     
     <section class="container">
           <form method="post" action="" class="row gx-4 gy-2 needs-validation" novalidate>
-            <?php if(!empty($statusMsg)){ ?>
-              <p class="statusMsg <?php echo !empty($msgClass)?$msgClass:''; ?>"><?php echo $statusMsg; ?></p>
-            <?php } ?>
             <!-- enctype="multipart/form-data" -->
             <div class="col-md-6">
               <label for="nombre" class="form-label">Nombre</label>
@@ -164,36 +159,12 @@
         />
         <p class="fw-light">© 2023 Fundación Tienda Inglesa.</p>
         <div>
-          <a
-            href="https://youtube.com/@canaltiendainglesa"
-            target="_blank"
-            aria-label="Ir a nuestro YouTube"
-            ><i class="bi bi-youtube"></i
-          ></a>
-          <a
-            href="http://twitter.com/TiendaInglesa"
-            target="_blank"
-            aria-label="Ir a nuestro Twitter - X"
-            ><i class="bi bi-twitter-x"></i
-          ></a>
-          <a
-            href="https://instagram.com/tiendainglesa"
-            target="_blank"
-            aria-label="Ir a nuestro Instagram"
-            ><i class="bi bi-instagram"></i
-          ></a>
-          <a
-            href="https://www.threads.net/@tiendainglesa"
-            target="_blank"
-            aria-label="Ir a nuestro Threads"
-            ><i class="bi bi-threads-fill"></i
-          ></a>
-          <a
-            href="http://www.facebook.com/tiendainglesa"
-            target="_blank"
-            aria-label="Ir a nuestro Facebook"
-            ><i class="bi bi-facebook"></i
-          ></a>
+          <a href="https://www.linkedin.com/company/fundacion-tienda-inglesa" target="_blank" aria-label="Ir a nuestro LinkedIn"><i class="bi bi-linkedin"></i></a>
+          <a href="https://youtube.com/@canaltiendainglesa" target="_blank" aria-label="Ir al YouTube Tienda Inglesa"><i class="bi bi-youtube"></i></a>
+          <a href="https://instagram.com/tiendainglesa" target="_blank" aria-label="Ir al Instagram Tienda Inglesa"><i class="bi bi-instagram"></i></a>
+          <a href="http://www.facebook.com/tiendainglesa" target="_blank" aria-label="Ir al Facebook Tienda Inglesa"><i class="bi bi-facebook"></i></a>
+          <a href="https://www.threads.net/@tiendainglesa" target="_blank" aria-label="Ir al Threads Tienda Inglesa"><i class="bi bi-threads-fill"></i></a>
+          <a href="http://twitter.com/TiendaInglesa" target="_blank" aria-label="Ir al X - Twitter Tienda Inglesa"><i class="bi bi-twitter-x"></i></a>
         </div>
       </div>
     </footer>
