--- a/sass-js/trayectorias.html
+++ b/sass-js/trayectorias.html
@@ -125,9 +125,58 @@
           </p>
         </div>
         <div>
+          <img src="../assetts/iconHand/icons-trust-100.png" alt="" />
+          <h3>+100</h3>
+          <p>
+            voluntarios de Tienda participan del programa consistentemente
+          </p>
+        </div>
+        <div>
           <img src="../assetts/iconHand/icons-choose-100.png" alt="" />
           <h3>5%</h3>
           <p>de la actual dotación de Tienda Inglesa proviene del Programa</p>
+        </div>
+        <div>
+          <img src="../assetts/iconHand/icons-trust-100.png" alt="" />
+          <h3>+100</h3>
+          <p>
+            voluntarios de Tienda participan del programa consistentemente
+          </p>
+        </div>
+        <div>
+          <img src="../assetts/iconHand/icons-trust-100.png" alt="" />
+          <h3>+100</h3>
+          <p>
+            voluntarios de Tienda participan del programa consistentemente
+          </p>
+        </div>
+        <div>
+          <img src="../assetts/iconHand/icons-trust-100.png" alt="" />
+          <h3>+100</h3>
+          <p>
+            voluntarios de Tienda participan del programa consistentemente
+          </p>
+        </div>
+        <div>
+          <img src="../assetts/iconHand/icons-trust-100.png" alt="" />
+          <h3>+100</h3>
+          <p>
+            voluntarios de Tienda participan del programa consistentemente
+          </p>
+        </div>
+        <div>
+          <img src="../assetts/iconHand/icons-trust-100.png" alt="" />
+          <h3>+100</h3>
+          <p>
+            voluntarios de Tienda participan del programa consistentemente
+          </p>
+        </div>
+        <div>
+          <img src="../assetts/iconHand/icons-trust-100.png" alt="" />
+          <h3>+100</h3>
+          <p>
+            voluntarios de Tienda participan del programa consistentemente
+          </p>
         </div>
         <div>
           <img src="../assetts/iconHand/icons-trust-100.png" alt="" />
